--- a/note/2. SearchResult 관련 요구사항.md
+++ b/note/2. SearchResult 관련 요구사항.md
@@ -4,6 +4,10 @@
 * 페이지를 새로고침해도 마지막 검색 결과 화면이 유지되도록 처리합니다.
 * lazy load 개념을 이용하여, 이미지가 화면에 보여야 할 시점에 load 되도록 처리해야 합니다.
 * 검색 결과 각 아이템에 마우스 오버시 고양이 이름을 노출합니다.
+* 유저가 사용하는 디바이스의 가로 길이에 따라 검색결과의 row 당 column 갯수를 적절히 변경해주어야 합니다.
+  * 992px 이하: 3개
+  * 768px 이하: 2개
+  * 576px 이하: 1개
 
 ```javascript
 // SearchResult.js
@@ -65,3 +69,17 @@ export default class SearchResult {
 
   }
 }
+````
+
+````css
+// style.css
+  .search-result {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 10px;
+    background-color:var(--background-color);
+    padding:30px;
+    text-align:center;
+    color: var(--font-color);
+  }
+````
