--- a/note/2. SearchResult 관련 요구사항.md
+++ b/note/2. SearchResult 관련 요구사항.md
@@ -1,5 +1,5 @@
 ## 2. SearchResult 관련 요구사항
-* 현재 HTML 코드가 전체적으로 <div> 로만 이루어져 있습니다. 이 마크업을 시맨틱한 방법으로 변경해야 합니다.
+* 현재 HTML 코드가 전체적으로 div 로만 이루어져 있습니다. 이 마크업을 시맨틱한 방법으로 변경해야 합니다.
 * 검색 결과가 없는 경우, 유저가 불편함을 느끼지 않도록 UI적인 적절한 처리가 필요합니다.
 * 페이지를 새로고침해도 마지막 검색 결과 화면이 유지되도록 처리합니다.
 * lazy load 개념을 이용하여, 이미지가 화면에 보여야 할 시점에 load 되도록 처리해야 합니다.
