Update 3. ImageInfo 관련 요구사항.md

--- a/note/3. ImageInfo 관련 요구사항.md
+++ b/note/3. ImageInfo 관련 요구사항.md
@@ -1,5 +1,5 @@
 ## 3. ImageInfo 관련 요구사항
-* 현재 HTML 코드가 전체적으로 <div> 로만 이루어져 있습니다. 이 마크업을 시맨틱한 방법으로 변경해야 합니다.
+* 현재 HTML 코드가 전체적으로 div 로만 이루어져 있습니다. 이 마크업을 시맨틱한 방법으로 변경해야 합니다.
 * 디바이스 가로 길이가 768px 이하인 경우, 모달의 가로 길이를 디바이스 가로 길이만큼 늘려야 합니다.
 * 이미지를 검색한 후 결과로 주어진 이미지를 클릭하면 모달이 뜨는데, 모달 영역 밖을 누르거나 / 키보드의 ESC 키를 누르거나 / 모달 우측의 닫기(x) 버튼을 누르면 닫히도록 수정해야 합니다.
 * 모달에서 고양이의 성격, 태생 정보를 렌더링합니다. 해당 정보는 /cats/:id 를 통해 불러와야 합니다.
